# meson-bootstrap

./: README.md  meson.build
include/module/: module.h
src/: main.c  meson.build
src/module/: module.c
test/: meson.build
test/module/: test-module-fail.c  test-module.c
